# bmi-python-module-2022

./: cat-67.csv  nex-68_output.csv  setup.cfg  toybmi_experiment.ipynb  toybmi_realization.json
.ipynb_checkpoints/: toybmi_experiment-checkpoint.ipynb  toybmi_realization-checkpoint.json
bmihydro/: __init__.py  toybmi.py
