[metadata]
name = bmihydro
version = 0.0.1
author = NOAA-OWP
description = BMI Hydrology Modules
long_description = BMI Modules for OWP Model Engine developed by Summer Institute 2022 participants
keywords = bmi, hydrology, water 
[options]
python_requires = >=3.8, <4
install_requires = 
    numpy
    bmipy
    pandas
[options.package_data]
sample = 
    config.yml
